test/netlist/error/used-var-not-assigned.bop
A() = b
where
  b = not(c);
end where;
